--- a/SAM/Views/Shared/Partials/_Navigation.cshtml
+++ b/SAM/Views/Shared/Partials/_Navigation.cshtml
@@ -136,9 +136,9 @@
                     </a>
                 </li>
                 <li class="nav-item" role="none">
-                    <a class="nav-link" asp-controller="UserManagement" asp-action="AdminRequests" role="menuitem" data-tooltip="Admin Requests">
+                    <a class="nav-link" asp-controller="UserManagement" asp-action="ManageAdmins" role="menuitem" data-tooltip="Manage Admins">
                         <i class="bi bi-shield-check"></i>
-                        <span class="nav-link-text">Admin Requests</span>
+                        <span class="nav-link-text">Manage Admins</span>
                     </a>
                 </li>
             </ul>
