--- a/SAM/Views/Shared/Partials/_UserMenu.cshtml
+++ b/SAM/Views/Shared/Partials/_UserMenu.cshtml
@@ -5,6 +5,7 @@
 @{
     var user = await UserManager.GetUserAsync(User);
     var isAdmin = user != null && await UserManager.IsInRoleAsync(user, "admin");
+    var isCompanyAdmin = user != null && (await UserManager.IsInRoleAsync(user, "admin") || await UserManager.IsInRoleAsync(user, "company_admin"));
 }
 
 <div class="dropdown">
@@ -32,6 +33,9 @@
                     <i class="bi bi-building-add me-2"></i> Company Requests
                 </a>
             </li>
+        }
+        @if (isCompanyAdmin)
+        {
             <li>
                 <a class="dropdown-item" asp-controller="UserManagement" asp-action="UserRequests">
                     <i class="bi bi-person-plus me-2"></i> User Requests
