--- a/SAM/Views/UserManagement/UserDetails.cshtml
+++ b/SAM/Views/UserManagement/UserDetails.cshtml
@@ -25,17 +25,12 @@
     </div>
 </div>
 
-<div class="card card-primary">
-    <div class="card-header">
-        <h5 class="mb-0"><i class="bi bi-person me-2"></i>@Model.FullName</h5>
-    </div>
+<div class="card">
     <div class="card-body">
+        <h5 class="mb-5"><i class="bi bi-person me-2"></i>@Model.FullName</h5>
         <dl class="row">
             <dt class="col-sm-3"><i class="bi bi-envelope me-1"></i>Email:</dt>
             <dd class="col-sm-9">@Model.Email</dd>
-
-            <dt class="col-sm-3"><i class="bi bi-person me-1"></i>Full Name:</dt>
-            <dd class="col-sm-9">@Model.FullName</dd>
 
             <dt class="col-sm-3"><i class="bi bi-briefcase me-1"></i>Company:</dt>
             <dd class="col-sm-9">@(Model.CompanyName ?? "N/A")</dd>
