--- a/SAM/Views/SystemAdmin/Partials/_FacilitiesPartial.cshtml
+++ b/SAM/Views/SystemAdmin/Partials/_FacilitiesPartial.cshtml
@@ -52,7 +52,10 @@
                             }
                             <th><i class="bi bi-geo-alt"></i> City, State</th>
                             <th><i class="bi bi-map"></i> County</th>
-                            <th class="table-actions"><i class="bi bi-gear"></i> Actions</th>
+                            @if (isGlobalAdmin)
+                            {
+                                <th class="table-actions"><i class="bi bi-gear"></i> Actions</th>
+                            }
                         </tr>
                     </thead>
                     <tbody>
