--- a/SAM/Views/UserManagement/Index.cshtml
+++ b/SAM/Views/UserManagement/Index.cshtml
@@ -42,7 +42,7 @@
             @if (Model.Users.Any())
             {
                 <div id="usersTableView" class="table-responsive">
-                    <table class="table table-hover">
+                    <table class="table table-hover irrigates-table">
                         <thead>
                             <tr>
                                 <th><i class="bi bi-person"></i> Full Name</th>
