--- a/SAM/Views/SystemAdmin/MonitoringWellDetails.cshtml
+++ b/SAM/Views/SystemAdmin/MonitoringWellDetails.cshtml
@@ -11,7 +11,7 @@
         <a asp-action="MonitoringWellEdit" asp-route-id="@Model.Id" class="btn btn-primary">
             <i class="bi bi-pencil"></i> Edit
         </a>
-        <a asp-action="SystemAdmin" asp-route-tab="monitoringwells" asp-route-companyId="@Model.CompanyId" class="btn btn-secondary">
+        <a asp-action="SystemAdmin" asp-route-tab="monitoringwells" class="btn btn-secondary">
             <i class="bi bi-arrow-left"></i> Back to List
         </a>
     </div>
